# ankh

./: .gitignore  .gitmodules  CHANGELOG.md  TODO.md  ankh.cabal  dev.sh  hie.yaml  package-lock.json  package.json
app/: Coord.hs  Main.hs
app/App/: Action.hs  ActionType.hs  ActionsBasic.hs  Board.hs  Cards.hs  Conflict.hs  DefaultBoard.hs  Event.hs  Input.hs  KOI.hs  LogItem.hs  Piece.hs  PlayerState.hs  Powers.hs  SplitSelection.hs  State.hs  StateView.hs
app/ui/: actionComponent.ts  boardComponent.ts  boardRenderer.ts  cardComponent.ts  edgeComponent.ts  hexComponent.ts  iconWithNumber.ts  index.html  logComponent.ts  main.ts  pieceComponent.ts  playerComponent.ts  protocol.ts  questionActions.ts  structureSupplyComponent.ts  style.css
app/ui/common-js/: combinators.ts  connect.ts
client/: package-lock.json  package.json
data/: ankh-base-map.json  sample-map.json
map-editor/: index.html  package-lock.json  package.json  vite.config.ts
map-editor/src/: grid-renderer.ts  main.ts  styles.css
server/: .gitignore  cabal.project  package-lock.json  package.json  server.cabal  vite.config.ts
server/app/App/: Board.hs  Input.hs  PlayerState.hs  State.hs  StateView.hs
server/app/ui/: index.html  main.ts
server/app/ui/common-js/: connect.ts  template.ts
