cabal-version:   3.0
name:            ankh
version:         0.1.0.0
license:         NONE
author:          Iavor S. Diatchki
maintainer:      iavor.diatchki@gmail.com
build-type:      Simple
extra-doc-files: CHANGELOG.md

common settings
    ghc-options: -Wall
    default-extensions: ImportQualifiedPost,
                        BangPatterns,
                        BlockArguments,
                        DeriveGeneric,
                        DeriveAnyClass,
                        TypeFamilies,
                        OverloadedStrings

executable ankh
    import:           settings
    main-is:          Main.hs
    other-modules:    App.KOI,
                      App.State,
                      App.StateView,
                      App.Input,
                      App.Board,
                      App.Piece,
                      App.PlayerState,
                      App.Powers,
                      App.Cards,
                      App.ActionType,
                      App.Action,
                      App.ActionsBasic,
                      App.SplitSelection,
                      App.Event,
                      App.Conflict,
                      App.LogItem,
                      Coord
    build-depends:    base ^>=4.19.2.0,
                      aeson,
                      bytestring,
                      containers,
                      KOI,
                      text,
                      vector
    hs-source-dirs:   app
    default-language: Haskell2010
